--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1510&q=80');
+  background-image: url('https://images.unsplash.com/photo-1504212991417-ce38c98bd0f1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80');
   background-size: cover;
-  background-positon: top;
+  background-position: center;
 }
 main {
   width: 25vw;
@@ -20,7 +20,7 @@ main {
   font-family: 'Montserrat', sans-serif;
   font-size: 2rem;
   text-align: center;
-  color: #F5F5F5;
+  color: #333333;
 }
 .clear {
   grid-column: 1 / 4;
@@ -28,19 +28,38 @@ main {
 
 button {
   background-color: transparent;
-  border: 1px solid #F5F5F5;
+  border: 1px solid #333333;
   height: 4rem;
   font-family: 'Montserrat', sans-serif;
   font-size: 1.2rem;
-  color: #F5F5F5;
+  color: #333333;
 }
 
 .result {
   grid-column: 1 / 4;
-  height: 1.5rem;
+  height: 2rem;
+}
+
+.animate {
+  animation: 0.25s pulse;
+}
+
+@keyframes pulse {
+  0% {transform: scale(1);}
+  50% {transform: scale(1.1);}
+  100% {transform: scale(1);}
 }
 
 @media only screen and (max-width: 800px) {
   main {
-    width: 80vw;
+    width: 70vw;
+    color: #F5F5F5;
+  }
+  button {
+    color: #F5F5F5;
+    border: 1px solid #F5F5F5;
+  }
+  .center {
+    background-image: url('https://images.unsplash.com/photo-1532654480395-36912a138b62?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1575&q=80')
+  }
 } 
